# mpi-rma-halo-tutorial

./: .gitignore  CMakeLists.txt  README.md
src/: grid.c  grid.h  rma_halo.c  two_sided_halo.c
src/tests/: unit_tests.c
